force-app/main/default/objects/Penny_Capability__c/Penny_Capability__c.object-meta.xml
<CustomObject>
    <description>Stores the definition of each thing Penny can do — what it is, who it serves, what it needs, and how mature it is. Powers the Penny Capabilities configuration page in Trail OS, replacing the current hardcoded TypeScript data file.</description>
    <label>Penny Capability</label>
    <nameField>
        <displayFormat>PCI-{000}</displayFormat>
        <label>Penny Capability Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Penny Capabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>