force-app/main/default/objects/Penny_Capability__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether Penny currently uses this capability</description>
    <inlineHelpText>Whether Penny currently uses this capability</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>