force-app/main/default/objects/Penny_Capability__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Penny_Audience</valueSetName>
    </valueSet>
</CustomField>