force-app/main/default/objects/Penny_Capability__c/fields/Capability_Name__c.field-meta.xml
<CustomField>
    <fullName>Capability_Name__c</fullName>
    <description>Unique name for a capability</description>
    <inlineHelpText>Unique name for a capability</inlineHelpText>
    <label>Capability Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>