force-app/main/default/objects/Penny_Capability__c/fields/Inputs__c.field-meta.xml
<CustomField>
    <fullName>Inputs__c</fullName>
    <description>What Penny needs to execute this capability</description>
    <inlineHelpText>What Penny needs to execute this capability</inlineHelpText>
    <label>Inputs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>