force-app/main/default/objects/Penny_Capability__c/fields/Maturity__c.field-meta.xml
<CustomField>
    <fullName>Maturity__c</fullName>
    <label>Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prototype</fullName>
            </value>
            <value>
                <fullName>Defined</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>