force-app/main/default/objects/Penny_Capability__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Ordered build steps to activate. One per line.</description>
    <inlineHelpText>Ordered build steps to activate. One per line.</inlineHelpText>
    <label>Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>