force-app/main/default/objects/Penny_Capability__c/fields/Outputs__c.field-meta.xml
<CustomField>
    <fullName>Outputs__c</fullName>
    <description>What Penny produces (messages, flags, logs, reports)</description>
    <inlineHelpText>What Penny produces (messages, flags, logs, reports)</inlineHelpText>
    <label>Outputs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>