force-app/main/default/objects/Penny_Capability__c/fields/Penny_Scope__c.field-meta.xml
<CustomField>
    <fullName>Penny_Scope__c</fullName>
    <label>Trail Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Penny_Scope</valueSetName>
    </valueSet>
</CustomField>