force-app/main/default/objects/Penny_Capability__c/fields/Prompt_Template__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the prompt that powers this capability.</description>
    <inlineHelpText>Links to the prompt that powers this capability.</inlineHelpText>
    <label>Prompt Template</label>
    <referenceTo>Penny_Prompt__c</referenceTo>
    <relationshipLabel>Penny Capabilities</relationshipLabel>
    <relationshipName>Penny_Capabilities</relationshipName>
    <type>Lookup</type>
</CustomField>