force-app/main/default/objects/Penny_Capability__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Why this capability matters and what problem it solves</description>
    <inlineHelpText>Why this capability matters and what problem it solves</inlineHelpText>
    <label>Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>