force-app/main/default/objects/Penny_Capability__c/fields/Related_SF_Objects__c.field-meta.xml
<CustomField>
    <fullName>Related_SF_Objects__c</fullName>
    <description>Comma-separated API names of SF objects this capability reads or writes</description>
    <inlineHelpText>Comma-separated API names of SF objects this capability reads or writes</inlineHelpText>
    <label>Related SF Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>