force-app/main/default/objects/Penny_Capability__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>One sentence. Shown in Trail OS list view.</description>
    <inlineHelpText>One sentence. Shown in Trail OS list view.</inlineHelpText>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>